[package]
name = "moneymarket-distribution-model"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A MoneyMarket distribution contract - handles over distribution model for ANC token"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.2.0"}
cosmwasm-bignumber = "1.0"
cosmwasm-std = "0.10.1"
cosmwasm-storage = "0.10.1"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.10.1"

[profile.dev]
overflow-checks = true
