[package]
name = "moneymarket-overseer"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A MoneyMarket custody contract - handles over loan management"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = "0.16.0"
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.2"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cw20 = "0.8.0"
terra-cosmwasm = "2.2.0"
terra-multi-test = { git = "https://github.com/astroport-fi/terra-plus.git", tag = "v0.9.1-terra" }
cw20-base = { version = "0.8", features = ["library"] }
moneymarket-market-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-overseer-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-market = { path = "../market" }
moneymarket-overseer = { path = "../overseer" }
moneymarket-oracle = { path = "../oracle" }
moneymarket-interest-model = { path = "../interest_model" }
moneymarket-distribution-model = { path = "../distribution_model" }
astroport = "0.3.1"

[profile.dev]
overflow-checks = true
